Adds animation to seabass

--- a/seabass.html
+++ b/seabass.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,width=device-width">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/seabass.css">
@@ -10,7 +10,15 @@
 </head>
 <body>
   <header>
-    <h1>seabass</h1>
+    <h1>
+      <span>s</span>
+      <span>e</span>
+      <span>a</span>
+      <span>b</span>
+      <span>a</span>
+      <span>s</span>
+      <span>s</span>
+    </h1>
   </header>
 </body>
 </html>
