Adds seabass to index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>index</h1>
     <ul>
       <li><a href="words.html">the world through words</a></li>
+      <li><a href="seabass.html">seabass</a></li>
     </ul>
   </head>
 </body>
